# yand

./: Cargo.toml  LICENSE  README.md  flake.nix
nix/modules/: home-manager.nix
res/: style.css
src/: dbus.rs  main.rs  notification.rs  yandctl.rs
systemd/: yand.service
