[package]
name = "yand"
version = "0.1.0"
edition = "2024"

[dependencies]
colog = "1.3.0"
gtk4 = { version = "0.9.6", features = ["v4_16"] }
gtk4-layer-shell = "0.5.0"
log = "0.4.27"
relm4 = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
zbus = { version = "5.7.1", features = ["tokio"] }
