[package]
name = "yand"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
colog = "1.3.0"
gtk4 = { version = "0.10.3", features = ["v4_16"] }
gtk4-layer-shell = "0.7.0"
log = "0.4.27"
relm4 = { git = "https://github.com/anyrun-org/Relm4", branch = "service"}
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
xdg = "3.0.0"
